# SubBitPacking

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
src/: bitpacked.h  bitpackedarray.h  bitpackedarrayiterator.h  compiletimeutils.h  powerlut.h  subbitpacked.h  subbitpackedarray.cpp  subbitpackedarray.h  subbitpackedarrayiterator.h  subbitpackedstruct.h  subbitpackedstructarray.h  subbitpackedstructbase.h  subbitpacking.h  superbitpacked.h  superbitpackedarray.h  superbitpackedarrayiterator.h  superbitpackedstructarray.h
src/base/: packedarray.h  packedstruct.h  subbitpackedstructbase.h
src/bitpacked/: bitpackedarray.h  bitpackedarrayiterator.h
src/subbitpacked/: subbitpackedarray.h  subbitpackedarraycleanwriteiterator.h  subbitpackedarrayiterator.h  subbitpackedarrayreaditerator.h  subbitpackedstruct.h  subbitpackedstructarray.h  subbitpackedstructarrayiterator.h
src/superbitpacked/: superbitpackedarray.h  superbitpackedarrayiterator.h  superbitpackedstructarray.h  superbitpackedstructarrayiterator.h
src/utils/: bitpackedentrybuffer.h  compiletime.h  packedstate.h  subbitpackeddata.h  superbitpackedarrayentrymetadata.h  superbitpackedentrybuffer.h  uint24.h  uintpacked.h
test/: CMakeLists.txt  subbitpackedarray_test.cpp  subbitpackedarraynoexceptions_test.cpp  subbitpackedstruct_test.cpp
tests/: CMakeLists.txt  test_sizes.h
tests/BitPackedArray/: CMakeLists.txt  bitpackedarray_test.cpp  bitpackedarraynoexception_test.cpp  bitpackedarraynoexceptions_test.cpp
tests/Mock/: subbitpackeddata_mock.h
tests/SubBitPackedArray/: CMakeLists.txt  subbitpackedarray_test.cpp  subbitpackedarraynoexception_test.cpp  subbitpackedarraynoexceptions_test.cpp
tests/SubBitPackedStruct/: CMakeLists.txt  subbitpackedstruct_test.cpp  subbitpackedstructnoexception_test.cpp
tests/SubBitPackedStructArray/: CMakeLists.txt  subbitpackedstructarray_test.cpp  subbitpackedstructarraynoexception_test.cpp
tests/SuperBitPackedArray/: CMakeLists.txt  superbitpackedarray_test.cpp  superbitpackedarraynoexception_test.cpp  superbitpackedarraynoexceptions_test.cpp
tests/SuperBitPackedStructArray/: CMakeLists.txt  superbitpackedstructarray_test.cpp  superbitpackedstructarraynoexception_test.cpp
